// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A with all props passed renders correctly 1`] = `
<a
  href="https://codeplaylove.de"
  rel="noopener noreferrer"
  target="_blank"
  title="CodePlayLove"
>
  My portfolio
</a>
`;

exports[`A with required props passed renders correctly 1`] = `
<a
  href="https://codeplaylove.de"
  rel={null}
  target="_SELF"
  title="My portfolio"
>
  My portfolio
</a>
`;
